<?xml version="1.0" encoding="utf-8"?>
<!--
	Copyright (C) 2012, 2021 Philipp Wolfer <ph.wolfer@gmail.com>

	This file is part of MusicBrainz Picard Barcode Scanner.

	MusicBrainz Picard Barcode Scanner is free software: you can redistribute it
	and/or modify it under the terms of the GNU General Public License as
	published by the Free Software Foundation, either version 3 of the License,
	or (at your option) any later version.

	MusicBrainz Picard Barcode Scanner is distributed in the hope that it will be
	useful, but WITHOUT ANY WARRANTY; without even the implied warranty of
	MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General
	Public License for more details.

	You should have received a copy of the GNU General Public License along with
	MusicBrainz Picard Barcode Scanner. If not, see
	<http://www.gnu.org/licenses/>.
--><resources xmlns:android="http://schemas.android.com/apk/res/android">
    <string name="app_name">Picard Barcode Scanner</string>
    <string name="app_version">Version %1$s</string>
    <string name="action_about">About</string>
    <string name="action_menu">Menu</string>
    <string name="action_settings">Settings</string>
    <string name="action_sponsor">Give a tip</string>
    <string name="about_copyright">Copyright © 2012–2014, 2020–2025 Philipp Wolfer&lt;br&gt;Copyright © 2021 Akshat Tiwari&lt;br&gt;&lt;br&gt;&lt;a href=\"https://github.com/phw/PicardBarcodeScanner\"&gt;https://github.com/phw/PicardBarcodeScanner&lt;/a&gt;</string>
    <string name="about_license_1">MusicBrainz Picard Barcode Scanner is free software: you can redistribute it and/or modify it under the terms of the <a href="https://www.gnu.org/licenses/gpl-3.0.en.html">GNU General Public License</a> as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.</string>
    <string name="about_license_2">MusicBrainz Picard Barcode Scanner is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.</string>
    <string name="about_picard_icon">The MusicBrainz Picard icon by the MetaBrainz Foundation is licensed under the <a href="https://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International (CC BY-SA 4.0)</a> license.</string>
    <string name="about_icons">The user interface uses the Android Developer Icons from <a href="https://github.com/opoloo/androidicons">https://github.com/opoloo/androidicons</a>, licensed under the <a href="https://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International (CC BY-SA 4.0)</a> license.</string>
    <string name="about_lottie">Loading animation by <a href="https://lottiefiles.com/7290-music-play">杜磊 on LottieFiles</a> licensed under the <a href="https://creativecommons.org/licenses/by/2.0/">Creative Commons Attribution 2.0 Generic (CC BY 2.0)</a> license.</string>
    <string name="description_connect">In order to send scanned barcodes to Picard you have to connect your device to the same network as the computer running Picard. Enter the IP address of the computer and Picard\'s port number below.</string>
    <string name="label_status_update">Checking Picard connection…</string>
    <string name="label_connection_error">Could not connect to Picard. Please check the connection settings and your Wi-Fi connection.</string>
    <string name="label_connection_no_config">Picard connection not configured.</string>
    <string name="picard_ip_address">IP address:</string>
    <string name="picard_port">Port:</string>
    <string name="btn_picard_connect">Connect with Picard</string>
    <string name="description_scanner">Use your device\'s camera to scan the barcode of a CD or other music media. If MusicBrainz knows about the media it will automatically be loaded into MusicBrainz Picard.</string>
    <string name="btn_scan_barcode">Scan barcode</string>
    <string name="description_result">MusicBrainz has found the following results for the barcode <b>%1$s</b> and sent them to Picard:</string>
    <string name="description_no_result">MusicBrainz has not found any release for the barcode <b>%1$s</b>.</string>
    <string name="loading_musicbrainz_text">Consulting MusicBrainz…</string>
    <string name="loading_picard_text">Sending data to Picard…</string>
    <string name="btn_save_preferences">Save settings</string>
    <string name="btn_port_detect">Auto-detect Picard network port</string>
    <string name="musicbrainz_server_url">MusicBrainz server:</string>
    <string name="validate_invalid_url">Enter a valid URL</string>
    <string name="validate_empty_picard_address">Enter IP address or hostname for Picard</string>
</resources>