<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright (C) 2012, 2021 Philipp Wolfer <ph.wolfer@gmail.com>

    This file is part of MusicBrainz Picard Barcode Scanner.

    MusicBrainz Picard Barcode Scanner is free software: you can redistribute it
    and/or modify it under the terms of the GNU General Public License as
    published by the Free Software Foundation, either version 3 of the License,
    or (at your option) any later version.

    MusicBrainz Picard Barcode Scanner is distributed in the hope that it will be
    useful, but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General
    Public License for more details.

    You should have received a copy of the GNU General Public License along with
    MusicBrainz Picard Barcode Scanner. If not, see
    <http://www.gnu.org/licenses/>.
-->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/window_padding" >

        <org.musicbrainz.picard.barcodescanner.views.ConnectionStatusView
            android:id="@+id/connection_status_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/content_padding"
            android:layout_marginBottom="@dimen/content_padding_large" />
        
        <TextView
            android:id="@+id/description_connect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description_connect" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@id/musicbrainz_server_url"
            android:layout_marginTop="@dimen/content_padding"
            android:text="@string/musicbrainz_server_url" />

        <EditText
            android:id="@+id/musicbrainz_server_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@id/picard_port"
            android:layout_marginTop="@dimen/content_padding"
            android:height="@dimen/edit_view_height"
            android:inputType="textUri"
            android:hint="@string/default_musicbrainz_server_url"
            android:importantForAutofill="no" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@id/picard_ip_address"
            android:layout_marginTop="@dimen/content_padding"
            android:text="@string/picard_ip_address" />
    
        <EditText
            android:id="@+id/picard_ip_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@id/picard_port"
            android:layout_marginTop="@dimen/content_padding"
            android:height="@dimen/edit_view_height"
            android:inputType="textNoSuggestions"
            android:importantForAutofill="no" />
    
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@id/picard_port"
            android:layout_marginTop="@dimen/content_padding"
            android:text="@string/picard_port" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/content_padding"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/picard_port"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:height="@dimen/edit_view_height"
                android:importantForAutofill="no"
                android:inputType="number"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/btn_port_detect"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

            <ImageButton
                android:id="@+id/btn_port_detect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/btn_port_detect"
                app:srcCompat="@drawable/ic_action_reload"
                app:layout_constraintStart_toEndOf="@+id/picard_port"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/btn_save_preferences"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/content_padding"
            android:drawableStart="@drawable/ic_action_music_1"
            android:text="@string/btn_save_preferences" />

    </LinearLayout>
</ScrollView>
